--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .app {
-    width: 450px;
+    width: 600px;
     background: white;
     padding: 30px;
     border-radius: 10px;
@@ -24,8 +24,12 @@ body {
 h1 {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
     margin-bottom: 20px;
     text-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
     color: black;
+}
+
+#input_container {
+    justify-content: center;
+    
 }
