--- a/style.css
+++ b/style.css
@@ -171,3 +171,22 @@ h1 {
     flex-direction: column;
     gap: 5px;
 }
+
+
+.task{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 12px 14px;
+    gap: 12px;
+    background-color: #f5f7fa;
+    border-radius: 10px;
+    font-weight: 500;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+    font-size: 16px;
+    transform-origin: center;
+}
+.task:hover{
+    background: #e9eef3;
+      transform: scale(1.01);
+}
