--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ h1 {
 
 .displayscreen {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     margin-bottom: 10px;
     padding: 12px 14px;
     gap: 12px;
